--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Rayton Burrell</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-        <link rel="icon" href="../media/images/circularicon.ico">
+        <link rel="icon" href="media/images/circularicon.ico">
 
 
     </head>
@@ -33,8 +33,8 @@
                 <a id="home"></a>
                 <div class="logo-container">
                     <div class="logo">
-                        <img id="mylogo" class="logo spin" src="../media/images/bluelogo.png" alt="Logo">
-                        <img id="avatar" class="logo unspin" src="../media/images/circularavatar.png" alt="Logo">
+                        <img id="mylogo" class="logo animate-up" src="media/images/bluelogo.png" alt="Logo">
+                        <img id="avatar" class="logo animate-down" src="media/images/circularavatar.png" alt="Logo">
                         <div class="description">
                             <h2 id="ray">Rayton Burrell</h2>
                             <p class="intro">Hey there, I'm Rayton. <br>
@@ -63,7 +63,7 @@
                             <h3>Projects</h3>
                             <h4 class="ark">Online Gaming Store</h4>
                             <div class="ark">
-                                <img id="ark" src="..//media/images/ark.png" alt="ARK Website">
+                                <img id="ark" src="media/images/ark.png" alt="ARK Website">
                                 <div class="project-desc">
                                     <p>Created using ASP.Net to demonstrate client and server side processing</p>
                                 </div>
@@ -73,7 +73,7 @@
                                 <br>
 
                                 <h4 class="orion">Orion's Institute</h4>
-                                <img id="orion" src="../media/images/orion.png" alt="Orion Website">
+                                <img id="orion" src="media/images/orion.png" alt="Orion Website">
 
                                 <div class="project-desc">
                                     <p>Highly interactive school website created using HTML | CSS | Javascript to stress
@@ -85,7 +85,7 @@
                                 <br>
 
                                 <h4 class="jbs">Utility Billing Application</h4>
-                                <img id="jbs" src="..//media/images/jbs.png" alt="Billing Application">
+                                <img id="jbs" src="media/images/jbs.png" alt="Billing Application">
 
                                 <div class="project-desc">
                                     <p>Interactive Windows form application designed to calculate,
@@ -102,7 +102,7 @@
                                     meantime though, here's an error 404 image and a download button
                                     that doesn't work. Enjoy!
                                 </p>
-                                <img src="../media/images/error404.png" width="90%" height="90%" alt="">
+                                <img src="media/images/error404.png" width="90%" height="90%" alt="">
                             </div>
                             <button class="downloadbtn">Download</button>
                         </div>
@@ -112,14 +112,13 @@
         </div>
         <div id="contact" class="footer">
             <ul class="contact-details" type="none">
-                <li>Github: <a href="https://github.com/BurRay">BurRay </a></li>
-                <li>Email: <a href="mailto: example@email.com">Rayton Burrell</a></li>
-                <li>Facebook: <a href="http://">Is For Old People 👀</a></li>
+                <li>Github: <a href="https:/github.com/BurRay">BurRay </a></li>
+                <li>Email: <a href="mailto: example@email.com">Rayton Burrell</a></li>                
                 <li>&copy 2019 Rayton Burrell</li>
-                <li><img src="../media/images/bluelogo.png" width="20" height="20" alt=""></li>
+                <li><img src="media/images/bluelogo.png" width="20" height="20" alt=""></li>
             </ul>
         </div>
-        <script src="../jscript/jscipt.js"></script>
+        <script src="jscript/jscipt.js"></script>
     </body>
 
 </html>
