--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
         <link rel="icon" href="media/images/circularicon.ico">
-
-
     </head>
 
     <body>
@@ -33,7 +31,7 @@
                 <a id="home"></a>
                 <div class="logo-container">
                     <div class="logo">
-                        <img id="mylogo" class="logo animate-up" src="media/images/bluelogo.png" alt="Logo">
+                        <img id="mylogo" class="logo animate-up" src="media/images/logo2.png" alt="Logo">
                         <img id="avatar" class="logo animate-down" src="media/images/circularavatar.png" alt="Logo">
                         <div class="description">
                             <h2 id="ray">Rayton Burrell</h2>
@@ -115,10 +113,9 @@
                 <li>Github: <a href="https:/github.com/BurRay">BurRay </a></li>
                 <li>Email: <a href="mailto: example@email.com">Rayton Burrell</a></li>                
                 <li>&copy 2019 Rayton Burrell</li>
-                <li><img src="media/images/bluelogo.png" width="20" height="20" alt=""></li>
+                <li><img src="media/images/logo2.png" width="20" height="20" alt=""></li>
             </ul>
         </div>
         <script src="jscript/jscipt.js"></script>
     </body>
-
 </html>
