Switched profile images

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <a id="home"></a>
                 <div class="logo-container">
                     <div class="logo">
-                        <img id="mylogo" class="logo animate-up" src="media/images/logo2.png" alt="Logo">
-                        <img id="avatar" class="logo animate-down" src="media/images/circularavatar.png" alt="Logo">
+                        <img id="mylogo" class="logo animate-up" src="media/images/circularavatar.png" alt="Logo">
+                        <img id="avatar" class="logo animate-down" src="media/images/logo2.png" alt="Logo">
                         <div class="description">
                             <h2 id="ray">Rayton Burrell</h2>
                             <p class="intro">Hey there, I'm Rayton. <br>
