--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#2496EF" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Rayton Burrell</title>
         <link rel="stylesheet" href="css/style.css">
@@ -31,8 +32,8 @@
                 <a id="home"></a>
                 <div class="logo-container">
                     <div class="logo">
-                        <img id="mylogo" class="logo animate-up" src="media/images/circularavatar.png" alt="Logo">
-                        <img id="avatar" class="logo animate-down" src="media/images/logo2.png" alt="Logo">
+                        <img id="mylogo" class="logo animate-up" src="media/images/logo2.png" alt="Logo">
+                        <img id="avatar" class="logo animate-down" src="media/images/circularavatar.png" alt="Logo">
                         <div class="description">
                             <h2 id="ray">Rayton Burrell</h2>
                             <p class="intro">Hey there, I'm Rayton. <br>
