--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                     <li>Photography</li>
                                     <li>Video & Image Editing</li>
                                     <li>Food</li>                                   
-                                    <li>HTML </li>                                   
+                                    <li>C# | SQL | HTML | CSS | Javascript</li>                                   
                                 </ul>
                         </div>
                         <div id="projects" class="card projects">
