First stage or redesign

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <title>Rayton Burrell</title>
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway:800&display=swap" rel="stylesheet">
         <link rel="icon" href="media/images/circularicon.ico">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"> </script>
     </head>
@@ -40,7 +41,7 @@
                             <img id="avatar" class="logo animate-down" src="media/images/circularavatar.png" alt="Logo">
                         </div>
                         <div class="description">
-                            <h2 id="ray">Rayton Burrell</h2>
+                            <h1 id="ray">Rayton Burrell</h1>
                             <p class="intro">Hey there, I'm Rayton. <br>
                                 An aspiring software/website developer and this is my first attempt
                                 at a personal website. <br>
@@ -48,17 +49,17 @@
                         </div>
                     </div>
                 </div>
+                <div id="about" class="about">
+                    <h3 class="skills">Interests</h3>
+                        <ul type="disc" class="listing skills">
+                            <li>Web & Application Developement</li>
+                            <li>C# | SQL | HTML | CSS | Javascript</li>
+                            <li>Photography</li>
+                            <li>Video & Image Editing</li>
+                        </ul>
+                </div>
                 <div class="placeholder-container">
-                    <div class="placeholder">
-                        <div id="about" class="card">
-                            <h3 class="skills">Interests</h4>
-                                <ul type="disc" class="listing skills">
-                                    <li>Web & Application Developement</li>
-                                    <li>C# | SQL | HTML | CSS | Javascript</li>
-                                    <li>Photography</li>
-                                    <li>Video & Image Editing</li>
-                                </ul>
-                        </div>
+                    <div class="placeholder">                        
                         <div id="projects" class="card">
                             <h3>Projects</h3>
 
@@ -101,7 +102,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="resume" class="card">
+                    <div id="resume" class="">
                         <h3 class="ray">Resume</h3>
                         <div class="project-desc">
                             <img id="res" src="media/images/resume.png" width="95%" height="90%" alt="">
