--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
                             <h2>Projects</h2>
 
                             <div class="projects">
+                                <div class="inner-card">
+                                    <h4 class="jbs">Utility Billing Application</h4>
+                                    <img id="jbs" src="media/images/jbs.png" alt="Billing Application">
+
+                                    <div class="project-desc">
+                                        <p> Windows form application designed to calculate,
+                                            store, and display utility bill.</p>
+                                    </div>
+                                    <button class="view jbs">VIEW</button>
+                                </div>
 
                                 <div class="inner-card">
                                     <h4 class="ark">Online Gaming Store</h4>
@@ -91,21 +101,10 @@
                                     </div>
                                     <button class="view orion">VIEW</button>
                                 </div>
-
-                                <div class="inner-card">
-                                    <h4 class="jbs">Utility Billing Application</h4>
-                                    <img id="jbs" src="media/images/jbs.png" alt="Billing Application">
-
-                                    <div class="project-desc">
-                                        <p> Windows form application designed to calculate,
-                                            store, and display utility bill.</p>
-                                    </div>
-                                    <button class="view orion">VIEW</button>
-                                </div>
                             </div>
                         </div>
                     </div>
-                    <div id="resume" class="">
+                    <div id="resume">
                         <h2 class="ray">Resume</h2>
                         <div class="project-desc">
                             <img id="res" src="media/images/resume.png" width="95%" height="90%" alt="">
