added navigation links

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         </header>
         <nav id="nav">
             <h2 id="name">RAYTON BURRELL</h2>
+            <div class="nav-links">
+                <a href="" class="nav-link">LOREM</a>
+                <a href="" class="nav-link">IPSUM</a>
+                <a href="" class="nav-link">DOLOR</a>
+                <a href="" class="nav-link">AMET</a>
+            </div>
         </nav>
         <main id="main">
             <div class="card"></div>
