--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <header>
+        <header id="header">
             <img id="avatar" src="media/images/avatar.png" alt="">
         </header>
         <nav id="nav">
