added funtionality behind navigation links

--- a/index.html
+++ b/index.html
@@ -16,16 +16,22 @@
         <nav id="nav">
             <h2 id="name">RAYTON BURRELL</h2>
             <div class="nav-links">
-                <a href="" class="nav-link">LOREM</a>
-                <a href="" class="nav-link">IPSUM</a>
-                <a href="" class="nav-link">DOLOR</a>
-                <a href="" class="nav-link">AMET</a>
+                <a href="#lorem" class="nav-link">LOREM</a>
+                <a href="#ipsum" class="nav-link">IPSUM</a>
+                <a href="#dolor" class="nav-link">DOLOR</a>
+                <a href="#" class="nav-link">AMET</a>
             </div>
         </nav>
         <main id="main">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+                <a id="lorem" class="card-anchor-link"></a>
+            </div>
+            <div class="card">
+                <a id="ipsum" class="card-anchor-link"></a>
+            </div>
+            <div class="card">
+                <a id="dolor" class="card-anchor-link"></a>
+            </div>
             <div class="card"></div>
             <div class="card"></div>
         </main>
