added active section slider under navigation link

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
                 <a href="#dolor" class="nav-link">DOLOR</a>
                 <a href="#" class="nav-link">AMET</a>
             </div>
+            <div id="active">
+                <span id="active-indicator" class="indicator" data-order="1"></span>
+                <span class="indicator" data-order="2"></span>
+                <span class="indicator" data-order="3"></span>
+                <span class="indicator" data-order="4"></span>
+            </div>
         </nav>
         <main id="main">
             <div class="card">
