--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Rayton Burrell</title>
-        <link rel="icon" href="media/images/circularicon.ico">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" href="media/images/avatar.png">
+        <link href="css/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     </head>
 
     <body>
