navigation links now highlighted on scroll (pt 1)

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <nav id="nav">
             <h2 id="name">RAYTON BURRELL</h2>
             <div class="nav-links">
-                <a href="#lorem" class="nav-link">LOREM</a>
-                <a href="#ipsum" class="nav-link">IPSUM</a>
-                <a href="#dolor" class="nav-link">DOLOR</a>
-                <a href="#" class="nav-link">AMET</a>
+                <a href="#lorem" data-order="1" class="nav-link">LOREM</a>
+                <a href="#ipsum" data-order="2" class="nav-link">IPSUM</a>
+                <a href="#dolor" data-order="3" class="nav-link">DOLOR</a>
+                <a href="#amet" data-order="4" class="nav-link">AMET</a>
             </div>
             <div id="active">
                 <span id="active-indicator" class="indicator" data-order="1"></span>
@@ -39,7 +39,11 @@
             <div class="card">
                 <a id="dolor" class="card-anchor-link"></a>
             </div>
-            <div class="card"></div>
+            <div class="card">
+                <a id="amet" class="card-anchor-link"></a>
+            </div>
+            <!-- <div class="card"></div>
+            <div class="card"></div> -->
             <div class="card"></div>
         </main>
 
