improvements to navigation links highlighting

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <nav id="nav">
             <h2 id="name">RAYTON BURRELL</h2>
             <div class="nav-links">
-                <a href="#lorem" data-order="1" class="nav-link">LOREM</a>
-                <a href="#ipsum" data-order="2" class="nav-link">IPSUM</a>
-                <a href="#dolor" data-order="3" class="nav-link">DOLOR</a>
-                <a href="#amet" data-order="4" class="nav-link">AMET</a>
+                <a href="#lorem" data-order="0" class="nav-link">LOREM</a>
+                <a href="#ipsum" data-order="1" class="nav-link">IPSUM</a>
+                <a href="#dolor" data-order="2" class="nav-link">DOLOR</a>
+                <a href="#amet" data-order="3" class="nav-link">AMET</a>
             </div>
             <div id="active">
-                <span id="active-indicator" class="indicator" data-order="1"></span>
+                <span id="active-indicator" class="indicator" data-order="0"></span>
+                <span class="indicator" data-order="1"></span>
                 <span class="indicator" data-order="2"></span>
                 <span class="indicator" data-order="3"></span>
-                <span class="indicator" data-order="4"></span>
             </div>
         </nav>
         <main id="main">
@@ -42,9 +42,9 @@
             <div class="card">
                 <a id="amet" class="card-anchor-link"></a>
             </div>
-            <!-- <div class="card"></div>
-            <div class="card"></div> -->
             <div class="card"></div>
+            <div class="card"></div>
+            <!-- <div class="card"></div> -->
         </main>
 
         <script src="jscript/jscipt.js"></script>
