--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <main id="main">
             <div class="card">
                 <a id="lorem" class="card-anchor-link"></a>
+                <a id="retro" style="display: block; font-size: x-large; text-decoration-line: underline; text-decoration-style: double; padding-top: 
+                    125px;font-family: 'Montserrat', sans-serif; text-align: center ; color: #0099ff;"
+                    href="old/index.html">OLD
+                    WEBSITE</a>
             </div>
             <div class="card">
                 <a id="ipsum" class="card-anchor-link"></a>
