fixed link to old website

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a id="lorem" class="card-anchor-link"></a>
                 <a id="retro" style="display: block; font-size: x-large; text-decoration-line: underline; text-decoration-style: double; padding-top: 
                     125px;font-family: 'Montserrat', sans-serif; text-align: center ; color: #0099ff;"
-                    href="old/index.html">OLD
+                    href="old/index.html" target="_blank">OLD
                     WEBSITE</a>
             </div>
             <div class="card">
