enabled javascript on old website

--- a/old/index.html
+++ b/old/index.html
@@ -126,8 +126,8 @@
                 <li><img src="media/images/darklogo.png" width="20" height="20" alt=""></li>
             </ul>
         </div>
-        <!-- <script src="jscript/jscipt.js"></script> -->
-        <!-- <script src="jscript/jquery.js"></script>     -->
+        <script src="jscript/jscipt.js"></script>
+        <!-- <script src="jscript/jquery.js"></script> -->
     </body>
 
 </html>
